# routes/users.js
@@ -7,8 +7,9 @@ const router = Router();
 router.get('/', authorization, UsersController.usersList)
 router.post('/sign-in', UsersController.signIn)
 router.post('/sign-up', UsersController.signUp)
-router.put('/update-profile', authorization, UsersController.updateProfile)
 router.post('/confirm-verification', authorization, UsersController.confirmVerification)
 router.post('/resend-verification', authorization, UsersController.resendVerification)
+router.put('/sign-up/user-info', authorization, UsersController.signUpUserInfo)
+router.put('/preferences', authorization, UsersController.addPreferences)
 
 export default router;
