# swagger.json
@@ -97,6 +97,13 @@
             "type": "string"
           },
           {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
             "name": "data",
             "in": "body",
             "schema": {
@@ -140,6 +147,113 @@
             "in": "header",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "422": {
+            "description": "Fail"
+          }
+        }
+      }
+    },
+    "/api/users/sign-up/user-info": {
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Sign up user info",
+        "parameters": [
+          {
+            "name": "language",
+            "in": "header",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "required": [
+                "first_name",
+                "last_name",
+                "phone_number"
+              ],
+              "properties": {
+                "first_name": {
+                  "type": "string"
+                },
+                "last_name": {
+                  "type": "string"
+                },
+                "phone_number": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "422": {
+            "description": "Fail"
+          }
+        }
+      }
+    },
+    "/api/users/sign-up/preferneces": {
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Add user preferences",
+        "parameters": [
+          {
+            "name": "language",
+            "in": "header",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token"
+          },
+          {
+            "name": "data",
+            "in": "body",
+            "schema": {
+              "required": [
+                "preferences"
+              ],
+              "properties": {
+                "preferences": {
+                  "type": "string",
+                  "example": "1,2",
+                  "description": "Sub category ids"
+                }
+              }
+            }
           }
         ],
         "responses": {
